wrapped pokemon in main fix card thx race

--- a/app.css
+++ b/app.css
@@ -133,7 +133,6 @@ main {
     transition: 0.5s;
     animation: fadeIn 0.5s;
     cursor: pointer;
-    margin-top: 100px;
 }
 
 .grid-item:hover {
