--- a/recipes.css
+++ b/recipes.css
@@ -233,7 +233,7 @@ table {
     width: 75vw;
     margin: auto;
     background-color: var(--light-grey);
-    margin-top: 100px;
+    margin-top: 140px;
 }
 
 thead {
